# vortexdb

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/engine/: core.rs
src/network/: connection.rs  server.rs
src/protocol/: command.rs  frame.rs  mod.rs
src/replication/: mod.rs  replica.rs
src/storage/: memtable.rs  mod.rs  segment.rs
src/wal/: log.rs
