[package]
name = "vortexdb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"